# nes2sms

./: .gitignore  AGENTS.md  INSTALL.md  USO_RAPIDO.md  build.bat  build_sms.ps1  capture_nes_frame.ps1  capture_nes_raw_frame.ps1  capture_sms_debug_artifacts.ps1  capture_sms_frame.ps1  check_symbols.py  compare_nes_sms_frames.ps1  debug.txt  debug_disasm.py  debug_extract.py  debug_nametable.py  debug_pong.py  debug_sta.py  debug_tiles.py  debug_vectors.py  debug_vram.lua  download_emulator.ps1  measure_pixel_diff.ps1  nes2sms.py  patch_analyze.py  pipeline.ps1  pyproject.toml  run_pong.ps1  run_sms.ps1  setup.bat  setup.sh  test_disasm.py  test_extractor.py
docs/: hardware_diff.md
homebrews/: Slice of Bread 0.12.nes  hello_world.nes  pong.nes
skills/nes-disasm/: SKILL.md
skills/nes-disasm/references/: mappers.md
skills/nes-disasm/scripts/: parse_nes.py
skills/nes2sms/: SKILL.md  convert_gfx.py  hardware_diff.md  nes2sms.skill  sms_packer.py
skills/nes2sms/hal_generator/: __init__.py  wladx_builder.py  wladx_ppu_components.py  wladx_simple_components.py
smspower/: architecture_marat.md  codemasters_tech.md  io_map_msx.md  official_manual.md  paging_chips.md  paging_notes.md  port3f_details.md  programming_guide_jon.md  psg_audio.md  sc3000.md  sdsc_standards.md  sg1000_tech.md  sms_tech.md  smsarch_paging.md  smsc_guide.md  smstech.md  system_e.md  tms9918_arizona_draft.md  tms9918a_spec.md  vdp_notes.md  vdp_tech.md  ym2413_fm_audio.md
src/nes2sms/: __init__.py
src/nes2sms.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/nes2sms/cli/: __init__.py  main.py
src/nes2sms/infrastructure/: __init__.py  asset_writer.py  fceux_runtime_capture.lua  fceux_runtime_capture.py  fceux_screenshot_capture.lua  fceux_screenshot_capture.py  nes_raw_reference_capture.py  rom_loader.py  symbol_extractor.py
src/nes2sms/shared/: __init__.py  constants.py  (+1 more)
tests/: conftest.py
tests/cli/: test_bootstrap_hello.py  test_convert_sprite_variants.py
tests/infrastructure/: test_fceux_screenshot_capture.py  test_symbol_extractor.py  test_wla_dx_generation.py
(+65 files in other folders)
