[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nes2sms"
version = "0.1.0"
description = "NES to Sega Master System conversion pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "nes2sms contributors"}
]
keywords = ["nes", "sms", "sega", "master-system", "retro", "conversion", "z80", "6502"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

# Note: WLA-DX is required for building SMS ROMs but not available via pip
# Install separately via:
#   - Windows: run setup.bat (downloads from GitHub releases)
#   - Linux: apt-get install wla-dx / dnf install wla-dx / brew install wla-dx
#   - macOS: brew install wla-dx
#   - Manual: https://github.com/vhelin/wla-dx/releases

[project.scripts]
nes2sms = "nes2sms.cli.main:main"

[project.urls]
"Homepage" = "https://github.com/nes2sms/nes2sms"
"Bug Tracker" = "https://github.com/nes2sms/nes2sms/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
